AutoObserver with realtime

--- a/ocraft-s2client-bot/pom.xml
+++ b/ocraft-s2client-bot/pom.xml
@@ -70,6 +70,12 @@
             <groupId>nl.jqno.equalsverifier</groupId>
             <artifactId>equalsverifier</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
