--- a/ocraft-s2client-sample/pom.xml
+++ b/ocraft-s2client-sample/pom.xml
@@ -14,6 +14,11 @@
             <groupId>com.github.ocraft</groupId>
             <artifactId>ocraft-s2client-bot</artifactId>
         </dependency>
+        <dependency>
+            <groupId>net.java.dev.jna</groupId>
+            <artifactId>jna-platform</artifactId>
+            <version>5.12.1</version>
+        </dependency>
     </dependencies>
 
     <build>
