--- a/pom.xml
+++ b/pom.xml
@@ -250,7 +250,11 @@
 
     <dependencyManagement>
         <dependencies>
-
+            <dependency>
+                <groupId>net.java.dev.jna</groupId>
+                <artifactId>jna-platform</artifactId>
+                <version>5.9.0</version>
+            </dependency>
             <!-- ocraft-s2client -->
             <dependency>
                 <groupId>com.github.ocraft</groupId>
